===v4.6.7===
 * Bug Fixes:
 ** (r310) Fixed sound event text overflow bug.
 ** (r311) Possibly fixed a bug that was casuing the event settings of deleted groups to stick around.
 
===v4.6.6===
 * The suggestion list has been completely rewritten, and many features have been added.
 * Seeing as Masque has been out for a month now, I think it is safe to say that ButtonFacade is now obsolete. Removed all support for ButtonFacade
 * Added a setting to make events only fire if the icon is shown.
 * Bug Fixes:
 ** (r300) default.lua:67: attempt to index local 'ics' (a nil value)
 ** (r301) TellMeWhen_Options-4.6.4.lua:5575 bad argument #1 to "pairs" (table expected, got nil)
 ** (r302) You can now properly undo a change in sound file
 ** (r302) TellMeWhen-4.6.6.lua:2259: bad argument #3 to "format" (number expected, got nil)
 ** (r302) TellMeWhen-4.6.6.lua:192: attempt to compare nil with number
 ** (r304) Fixed various bugs relating to inserting text into strings with multibyte characters (zhCN, zhTW, koKR, ruRU)
 ** (r307) TellMeWhen_Options.lua:4662: Usage: GetModule(name, silent): "name" - Cannot find module "cooldown"
 ** (r307) Imported strings created in r307+ into r307+ will now try extra hard to fix any errors casued by Blizzard's buggy editboxes.
 ** (r308) Event settings in the icon editor should now always updated to reflect their current setting.
 ** (r308) Fixed buggy event button texts for zhCN and zhTW clients.
 
===v4.6.5===
 * Bug Fixes:
 ** (r294) Fixed a bug where conditions were being erroneously attached to an icon/group after adding a condition and then removing all conditions.
 ** (r294) TellMeWhen.lua line 1452: attempt to index local 'condition' (a number value)
 ** (r296) TellMeWhen_Options.lua:2703: Missing version of data
 
===v4.6.4===
 * New Condition: Pet talent tree.
 * You can now undo and redo changes made to icon settings.
 * Rewrote the help module, and migrated/added some new warnings to it.