@@ -1,7 +1,8 @@
 ===v4.6.7===
  * Bug Fixes:
  ** (r310) Fixed sound event text overflow bug.
- ** (r311) Possibly fixed a bug that was casuing the event settings of deleted groups to stick around.
+ ** (r311) Possibly fixed a bug that was causing the event settings of deleted groups to stick around.
+ ** (r312) Added Sudden Death/Colossus Smash to the cooldown reset tracker for Unit Cooldown icons.
  
 ===v4.6.6===
  * The suggestion list has been completely rewritten, and many features have been added.
